..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.9rc1

New features:

Bug fixes:
..F....... [ZBX-11477] fixed lost user name in profile title (miks)
A......... [ZBX-10373] fixed check for screen items overlap (gcalenko, Sasha)
........S. [ZBX-11889] fixed lastaccess update for passive proxy (viktors)
..F....... [ZBX-11960] fixed interface dragging in host edit page in Chome browser (vmurzins)
..F....... [ZBX-11345] fixed webscenario update error when step does not exist (gcalenko)
..F....... [ZBX-11975] fixed undefined index error in web scenario step creation (vmurzins)
........S. [ZBX-11980] fixed incorrect type handling in SSH checks (abs)
...G...... [ZBX-11959] fixed memory leak in the agent on OpenBSD, FreeBSD and NetBSD (abs)
..F....... [ZBX-11984] fixed host hyperlink style on event details page (gcalenko)
.......PS. [ZBX-11807] fixed poller stalling due to incorrect handling of unixODBC library (viktors)
A......... [ZBX-9358] improved randomness in session ID generation (vmurzins)
..F....... [ZBX-11933] added fullscreen parameter in link to submap in maps (vmurzins)
A......... [ZBX-11893] fixed permission issue, when importing hosts that are monitored by proxy by Zabbix Admin type user (vmurzins)
..F....... [ZBX-11905] fixed redirect to original requested page after login (vmurzins)
.......PS. [ZBX-11864] fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
..F....... [ZBX-11624] fixed undefined index error for regular expressions form (vmurzins)