@@ -371,6 +371,7 @@ Changes for 3.0.9rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-10997] fixed usage of wrong API in screen constructor (miks)
 ..F....... [ZBX-11477] fixed lost user name in profile title (miks)
 A......... [ZBX-10373] fixed check for screen items overlap (gcalenko, Sasha)
 ........S. [ZBX-11889] fixed lastaccess update for passive proxy (viktors)
